tryin to solve the pdf not showing up bc of a fkin server issue

--- a/styles.css
+++ b/styles.css
@@ -517,7 +517,7 @@ header {
     font-size: 1rem;
 }
 
-iframe {
+embed {
     flex: 1;
     width: 100%;
     height: calc(100% - 64px);
